--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name="ie.wit.foraging.home.Home">
+            android:name="ie.wit.foraging.ui.home.Home">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
